<resources>
    <string name="app_name">Livros</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to Main Navigation -->
    <string name="book_list">Book List</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="book">Book</string>
    <string name="book_description">Book Description</string>


    <!-- Strings related to Splash Screen -->
    <string name="permissionnotallowed">Internet Permission is required!</string>

    <!-- Strings related to webService -->
    <string name="jsongetdata">Failed to get webservice data.</string>

    <!-- Strings related to login -->
    <string name="prompt_username">User Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_login">Login</string>
    <string name="prompt_keepLogged">Keep Logged</string>
    <string name="login_failed">Login failed</string>
    <string name="login_invalid">Username or password invalid.</string>
    <string name="login_fillfields">Please, username and password are required.</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">Livros</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_addbook">Add Book</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_book">ADD A NEW BOOK</string>
    <string name="book_name">Book Name</string>
    <string name="book_author">Author Name</string>
    <string name="book_desc">Book Description</string>
    <string name="book_editor">Editor\' Name</string>
    <string name="book_add">Add Book</string>
    <string name="book_update">Update Book</string>
    <string name="all_required">All fields are required.</string>
    <string name="book_insert_failed">Failed to add book</string>
    <string name="book_insert_success">Book Added!</string>
    <string name="book_update_failed">Failed to update book</string>
    <string name="book_update_success">Book Updated!</string>
    <string name="update_book">UPDATE BOOK</string>
    <string name="delete_entry">Delete entry </string>
    <string name="confirm_delete_entry">Are you sure you want to delete this entry?</string>
    <string name="entry_deleted">Entry removed!</string>

</resources>
